--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,7 @@ packaging==20.4
 pandas==1.0.5
 pandocfilters==1.4.2
 parso==0.7.0
+patsy==0.5.1
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==7.2.0
@@ -73,10 +74,12 @@ seaborn==0.10.1
 Send2Trash==1.5.0
 six==1.15.0
 sklearn==0.0
+statsmodels==0.11.1
 tensorboard==2.2.2
 tensorboard-plugin-wit==1.7.0
 tensorflow==2.2.0
 tensorflow-estimator==2.2.0
+tensorflow-gpu==2.2.0
 termcolor==1.1.0
 terminado==0.8.3
 testpath==0.4.4
